# beast2analysisutils

./: .gitignore  404.html  LICENSE  README.md  TODO.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: publish.yml
docs/: index.md  reference.md
reference/: index.html
search/: search_index.json
src/beast2analysisutils/: __init__.py  ess.py  remaster.py
src/beast2analysisutils/data/templates/: Template.xml  Template_fixedtree.xml
tests/: test_ess.py  test_remaster.py
tests/data/: 1_2_simulation.nexus  1_2_simulation.trees
